--- a/packages/prometheus-federator/charts/values.yaml
+++ b/packages/prometheus-federator/charts/values.yaml
@@ -49,7 +49,7 @@ helmProjectOperator:
 
   image:
     repository: rancher/prometheus-federator
-    tag: 0.0.1-rc1
+    tag: v0.0.1-rc1
     pullPolicy: IfNotPresent
 
   # Additional arguments to be passed into the Prometheus Federator image
