--- a/charts/rancher-project-monitoring/0.0.1/templates/dashboard-values-configmap.yaml
+++ b/charts/rancher-project-monitoring/0.0.1/templates/dashboard-values-configmap.yaml
@@ -15,7 +15,9 @@ metadata:
 data:
   values.json: |-
     {
-{{- if .Values.prometheus.prometheusSpec.externalUrl }}
+{{- if not .Values.prometheus.enabled }}
+      "prometheusURL": "",
+{{- else if .Values.prometheus.prometheusSpec.externalUrl }}
       "prometheusURL": "{{ tpl .Values.prometheus.prometheusSpec.externalUrl . }}",
 {{- else if and .Values.prometheus.ingress.enabled .Values.prometheus.ingress.hosts }}
       "prometheusURL": "http://{{ tpl (index .Values.prometheus.ingress.hosts 0) . }}{{ .Values.prometheus.prometheusSpec.routePrefix }}",
@@ -25,7 +27,9 @@ data:
       "prometheusURL": "http://{{ template "project-prometheus-stack.fullname" . }}-prometheus.{{ template "project-prometheus-stack.namespace" . }}:{{ .Values.prometheus.service.port }}",
 {{- end }}
 
-{{- if and .Values.grafana.ingress.enabled .Values.grafana.ingress.hosts }}
+{{- if not .Values.grafana.enabled }}
+      "grafanaURL": "",
+{{- else if and .Values.grafana.ingress.enabled .Values.grafana.ingress.hosts }}
       "grafanaURL": "http://{{ tpl (index .Values.grafana.ingress.hosts 0) . }}{{ .Values.grafana.grafanaSpec.ingress.path }}",
 {{- else if not (or (kindIs "invalid" .Values.global.cattle.url) (kindIs "invalid" .Values.global.cattle.clusterId)) }}
       "grafanaURL": "{{ .Values.global.cattle.url }}/k8s/clusters/{{ .Values.global.cattle.clusterId }}/api/v1/namespaces/{{ template "project-prometheus-stack.namespace" . }}/services/http:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}/proxy",
@@ -33,7 +37,9 @@ data:
       "grafanaURL": "http://{{ include "call-nested" (list . "grafana" "grafana.fullname") }}.{{ template "project-prometheus-stack.namespace" . }}:{{ .Values.grafana.service.port }}",
 {{- end }}
 
-{{- if .Values.alertmanager.alertmanagerSpec.externalUrl }}
+{{- if not .Values.alertmanager.enabled }}
+      "alertmanagerURL": "",
+{{- else if .Values.alertmanager.alertmanagerSpec.externalUrl }}
       "alertmanagerURL": "{{ tpl .Values.alertmanager.alertmanagerSpec.externalUrl . }}",
 {{- else if and .Values.alertmanager.ingress.enabled .Values.alertmanager.ingress.hosts }}
       "alertmanagerURL": "http://{{ tpl (index .Values.alertmanager.ingress.hosts 0) . }}{{ .Values.alertmanager.alertmanagerSpec.routePrefix }}",
@@ -43,5 +49,9 @@ data:
       "alertmanagerURL": "http://{{ template "project-prometheus-stack.fullname" . }}-alertmanager.{{ template "project-prometheus-stack.namespace" . }}:{{ .Values.alertmanager.service.port }}",
 {{- end }}
 
-      "rancherDashboards": {{- $rancherDashboards | toPrettyJson | nindent 8 }}                
+{{- if and .Values.grafana.enabled .Values.grafana.defaultDashboardsEnabled }}
+      "rancherDashboards": {{- $rancherDashboards | toPrettyJson | nindent 8 }}
+{{- else }}
+      "rancherDashboards": []
+{{- end }}
     }
