--- a/packages/prometheus-federator/charts/Chart.yaml
+++ b/packages/prometheus-federator/charts/Chart.yaml
@@ -8,6 +8,8 @@ annotations:
   catalog.cattle.io/provides-gvr: helm.cattle.io.projecthelmchart/v1alpha1
   catalog.cattle.io/rancher-version: '>= 2.6.5-0 <= 2.6.100-0'
   catalog.cattle.io/release-name: prometheus-federator
+  catalog.cattle.io/requests-cpu: 4500m
+  catalog.cattle.io/requests-memory: 4000Mi
 apiVersion: v2
 appVersion: 0.1.0
 dependencies:
