--- a/packages/prometheus-federator/charts/values.yaml
+++ b/packages/prometheus-federator/charts/values.yaml
@@ -56,7 +56,7 @@ helmProjectOperator:
 
   image:
     repository: rancher/prometheus-federator
-    tag: v0.1.0
+    tag: v0.2.0-rc1
     pullPolicy: IfNotPresent
 
   # Additional arguments to be passed into the Prometheus Federator image
