--- a/packages/rancher-project-monitoring/generated-changes/overlay/questions.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/overlay/questions.yaml
@@ -11,12 +11,12 @@ questions:
   group: Grafana
   show_subquestion_if: true
   subquestions:
-  - variable: grafana.admin.adminUser
+  - variable: grafana.adminUser
     label: Grafana Admin User
     type: string
     default: admin
     group: Grafana
-  - variable: grafana.admin.adminPassword
+  - variable: grafana.adminPassword
     label: Grafana Admin Password
     type: string
     default: prom-operator
