--- a/charts/rancher-project-monitoring/0.2.0-rc3/templates/prometheus/psp.yaml
+++ b/charts/rancher-project-monitoring/0.2.0-rc3/templates/prometheus/psp.yaml
@@ -1,18 +1,16 @@
 {{- if .Capabilities.APIVersions.Has "policy/v1beta1/PodSecurityPolicies" }}
-{{- if and .Values.prometheusOperator.enabled .Values.prometheusOperator.admissionWebhooks.enabled .Values.prometheusOperator.admissionWebhooks.patch.enabled .Values.global.rbac.create .Values.global.rbac.pspEnabled (not .Values.prometheusOperator.admissionWebhooks.certManager.enabled) }}
+{{- if and .Values.prometheus.enabled .Values.global.rbac.create .Values.global.rbac.pspEnabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: {{ template "kube-prometheus-stack.fullname" . }}-admission
-  annotations:
-    "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+  name: {{ template "project-prometheus-stack.fullname" . }}-prometheus
+  labels:
+    app: {{ template "project-prometheus-stack.name" . }}-prometheus
 {{- if .Values.global.rbac.pspAnnotations }}
+  annotations:
 {{ toYaml .Values.global.rbac.pspAnnotations | indent 4 }}
 {{- end }}
-  labels:
-    app: {{ template "kube-prometheus-stack.name" . }}-admission
-{{ include "kube-prometheus-stack.labels" . | indent 4 }}
+{{ include "project-prometheus-stack.labels" . | indent 4 }}
 spec:
   privileged: false
   # Allow core volume types.
@@ -23,6 +21,9 @@ spec:
     - 'secret'
     - 'downwardAPI'
     - 'persistentVolumeClaim'
+{{- if .Values.prometheus.podSecurityPolicy.volumes }}
+{{ toYaml .Values.prometheus.podSecurityPolicy.volumes | indent 4 }}
+{{- end }}
   hostNetwork: false
   hostIPC: false
   hostPID: false
@@ -45,5 +46,9 @@ spec:
       - min: 0
         max: 65535
   readOnlyRootFilesystem: false
+{{- if .Values.prometheus.podSecurityPolicy.allowedCapabilities }}
+  allowedCapabilities:
+{{ toYaml .Values.prometheus.podSecurityPolicy.allowedCapabilities | indent 4 }}
+{{- end }}
 {{- end }}
 {{- end }}
