--- a/charts/prometheus-federator/0.2.0-rc4/charts/helmProjectOperator/templates/deployment.yaml
+++ b/charts/prometheus-federator/0.2.0-rc4/charts/helmProjectOperator/templates/deployment.yaml
@@ -105,7 +105,7 @@ spec:
             mountPath: "/etc/helmprojectoperator/config"
       serviceAccountName: {{ template "helm-project-operator.name" . }}
 {{- if .Values.securityContext }}
-      securityContext: {{ toYaml .Values.securityContext | nindent 8 }}
+      securityContext: {{ toYaml .Values.securityContext | indent 8 }}
 {{- end }}
       nodeSelector: {{ include "linux-node-selector" . | nindent 8 }} 
 {{- if .Values.nodeSelector }}
