--- a/packages/prometheus-federator/charts/values.yaml
+++ b/packages/prometheus-federator/charts/values.yaml
@@ -6,6 +6,8 @@
 
 global:
   cattle:
+    psp:
+      enabled: false
     systemDefaultRegistry: ""
     projectLabel: field.cattle.io/projectId
     clusterId: ""
