--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -14,6 +14,9 @@ RUN if [ "${ARCH}" == "amd64" ]; then \
         curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.50.1; \
     fi
 
+ENV YQ_VERSION=v4.25.1
+RUN wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_${ARCH} -O /usr/bin/yq && chmod +x /usr/bin/yq;
+
 COPY --from=helm ./helm/bin/helm /usr/local/bin/
 
 ENV DAPPER_ENV REPO TAG DRONE_TAG CROSS
