--- a/charts/prometheus-federator/0.2.0-rc4/charts/helmProjectOperator/questions.yaml
+++ b/charts/prometheus-federator/0.2.0-rc4/charts/helmProjectOperator/questions.yaml
@@ -1,4 +1,10 @@
 questions:
+- variable: global.cattle.psp.enabled
+  default: "false"
+  description: "Flag to enable or disable the installation of PodSecurityPolicies by this chart in the target cluster. If the cluster is running Kubernetes 1.25+, you must update this value to false."
+  label: "Enable PodSecurityPolicies"
+  type: boolean
+  group: "Security Settings"
 - variable: helmController.enabled
   label: Enable Embedded Helm Controller
   description: 'Note: If you are running this chart in an RKE2 cluster, this should be disabled.'
