--- a/charts/prometheus-federator/0.2.0-rc4/charts/helmProjectOperator/templates/psp.yaml
+++ b/charts/prometheus-federator/0.2.0-rc4/charts/helmProjectOperator/templates/psp.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.global.rbac.pspEnabled (.Capabilities.APIVersions.Has "policy/v1beta1/PodSecurityPolicies") }}
+{{- if .Values.global.cattle.psp.enabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
