--- a/charts/rancher-project-monitoring/0.2.2/templates/rancher-monitoring/hardened.yaml
+++ b/charts/rancher-project-monitoring/0.2.2/templates/rancher-monitoring/hardened.yaml
@@ -114,22 +114,33 @@ spec:
 {{- end }}
 {{- $root := . }}
 {{- $projectNamespaceSelector := .Values.global.cattle.projectNamespaceSelector }}
+{{- $limitIngressToProject := .Values.global.networkPolicy.limitIngressToProject }}
 {{- $egressPolicy := .Values.global.networkPolicy.egress }}
+{{- $ingressPolicy := .Values.global.networkPolicy.ingress }}
 {{- range $_, $ns := $namespaces }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: default-allow-all
+  name: project-monitoring-policy
   namespace: {{ $ns }}
 spec:
   podSelector: {}
   ingress:
-  - from:
-    - namespaceSelector: {{ $projectNamespaceSelector | toYaml | nindent 8 }}
-    - namespaceSelector:
-        matchLabels:
-          kubernetes.io/metadata.name: {{ $ns }}
+{{- if or $ingressPolicy $limitIngressToProject }}
+{{- if $ingressPolicy }}
+{{ $ingressPolicy | toYaml | indent 4 }}
+{{- end }}
+{{- if $limitIngressToProject }}
+    - from:
+      - namespaceSelector: {{ $projectNamespaceSelector | toYaml | nindent 10 }}
+      - namespaceSelector:
+          matchLabels:
+            kubernetes.io/metadata.name: {{ $ns }}
+{{- end }}
+{{- else }}
+    - {}
+{{- end }}
   egress: {{ $egressPolicy | toYaml | nindent 4 }}
   policyTypes:
   - Ingress
