--- a/packages/rancher-project-monitoring/generated-changes/overlay/templates/dashboard-roles.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/overlay/templates/dashboard-roles.yaml
@@ -19,10 +19,16 @@ rules:
   - "https:{{ template "project-prometheus-stack.fullname" . }}-prometheus:{{ .Values.prometheus.service.port }}"
   - "http:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
   - "https:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
+{{- if .Values.grafana.enabled }}
   - "http:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
   - "https:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
+{{- end }}
   verbs:
   - 'get'
+  - 'create'
+  - 'update'
+  - 'patch'
+  - 'delete'
 - apiGroups:
   - ""
   resources:
@@ -30,7 +36,9 @@ rules:
   resourceNames:
   - {{ template "project-prometheus-stack.fullname" . }}-prometheus
   - {{ template "project-prometheus-stack.fullname" . }}-alertmanager
+{{- if .Values.grafana.enabled }}
   - {{ include "call-nested" (list . "grafana" "grafana.fullname") }}
+{{- end }}
   verbs:
   - list
 - apiGroups:
@@ -67,10 +75,16 @@ rules:
   - "https:{{ template "project-prometheus-stack.fullname" . }}-prometheus:{{ .Values.prometheus.service.port }}"
   - "http:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
   - "https:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
+{{- if .Values.grafana.enabled }}
   - "http:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
   - "https:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
+{{- end }}
   verbs:
   - 'get'
+  - 'create'
+  - 'update'
+  - 'patch'
+  - 'delete'
 - apiGroups:
   - ""
   resources:
@@ -78,7 +92,9 @@ rules:
   resourceNames:
   - {{ template "project-prometheus-stack.fullname" . }}-prometheus
   - {{ template "project-prometheus-stack.fullname" . }}-alertmanager
+{{- if .Values.grafana.enabled }}
   - {{ include "call-nested" (list . "grafana" "grafana.fullname") }}
+{{- end }}
   verbs:
   - list
 - apiGroups:
@@ -114,8 +130,10 @@ rules:
   - "https:{{ template "project-prometheus-stack.fullname" . }}-prometheus:{{ .Values.prometheus.service.port }}"
   - "http:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
   - "https:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
+{{- if .Values.grafana.enabled }}
   - "http:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
   - "https:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
+{{- end }}
   verbs:
   - 'get'
 - apiGroups:
@@ -125,7 +143,9 @@ rules:
   resourceNames:
   - {{ template "project-prometheus-stack.fullname" . }}-prometheus
   - {{ template "project-prometheus-stack.fullname" . }}-alertmanager
+{{- if .Values.grafana.enabled }}
   - {{ include "call-nested" (list . "grafana" "grafana.fullname") }}
+{{- end }}
   verbs:
   - list
 - apiGroups:
